# ts2yaml-bazel

./: .gitignore  README.md  WORKSPACE  bazel-bin  bazel-out  bazel-testlogs  bazel-ts-node-example  package.json  tsconfig.json
services/my-sample-service/: BUILD.bazel  tsconfig.json
services/my-sample-service/src/api/routes/: common.schema.ts  openapi.schema.json  openapi.schema.ts
services/my-sample-service/src/api/routes/users/: models.schema.ts  openapi.schema.ts
services/my-sample-service/src/api/routes/users/actions/: list.schema.ts
