load("//build/rules/json2yaml:json2yaml.bzl", "generate_yaml_from_json")
load("//build/rules/ts2yaml:ts2yaml.bzl", "generate_yaml_from_ts")

DEPENDENCIES = [
    "@npm//openapi-core",
    "@npm//yaml",
]

TYPE_DEPENDENCIES = [
    "@npm//@types/yaml",
]

### Generate YAML

# From JSON, this works
# generate_yaml_from_json(
#     name = 'generate_yaml',
#     schema = "src/api/routes/schema/openapi.schema.json"
# )

# From ts
generate_yaml_from_ts(
    name = 'generate_yaml',
    schema = "src/api/routes/openapi.schema.ts"
)